--- a/src/main/resources/templates/person-detail.html
+++ b/src/main/resources/templates/person-detail.html
@@ -58,7 +58,6 @@
                 <button class="btn btn-dark btn-sqr graph-filter"><a href="#" data-toggle="modal"
                                                                      data-target="#graphModal"><i
                         class="fa fa-sliders-h btn-icon"></i></a></button>
-                <!--                <img src="https://via.placeholder.com/500" width="100%">-->
                 <div id="graphContainer" style="width: 100%;height:600px"></div>
             </div>
         </div>
@@ -181,66 +180,182 @@
         </div>
     </div>
 </div>
-<script src="js/column-chart-person.js"></script>
 <script th:inline="javascript">
     const graph = /*[[${pDetailVO.echartsVO}]]*/ "??";
-    const dom = document.getElementById("graphContainer");
-    const myChart = echarts.init(dom);
-    const app = {};
-    let option;
-    const colorTable = ['#FF5733', '#27AE60', '#884EA0'];
-    // myChart.showLoading();
-    graph.nodes.forEach(function (node) {
-        node.symbolSize = 50;
-    });
-    graph.nodes.forEach(function (node) {
-        node.category = parseInt(node.category);
-    })
-    option = {
-        title: {
-            text: ' ',
-            subtext: 'Default layout',
-            top: 'bottom',
-            left: 'right'
-        },
-        tooltip: {},
-        legend: [{
-            // selectedMode: 'single',
-            data: graph.category.map(function (a) {
-                return a.name;
-            })
-        }],
-        series: [
-            {
-                name: 'test',
-                type: 'graph',
-                layout: 'force',
-                data: graph.nodes,
-                links: graph.links,
-                categories: graph.category,
-                roam: true,
-                label: {
-                    show: true
-                },
-                force: {
-                    repulsion: 1000
-                },
-                emphasis: {
-                    focus: 'adjacency',
-                    lineStyle: {
-                        width: 10
+    renderGraph();
+    renderBar();
+
+    function renderGraph() {
+        const dom = document.getElementById("graphContainer");
+        const myChart = echarts.init(dom);
+        const app = {};
+        let option;
+        const colorTable = ['#FF5733', '#27AE60', '#884EA0'];
+        // myChart.showLoading();
+        graph.nodes.forEach(function (node) {
+            node.symbolSize = 50;
+        });
+        graph.nodes.forEach(function (node) {
+            node.category = parseInt(node.category);
+        })
+        option = {
+            title: {
+                text: ' ',
+                subtext: 'Default layout',
+                top: 'bottom',
+                left: 'right'
+            },
+            tooltip: {},
+            legend: [{
+                // selectedMode: 'single',
+                data: graph.category.map(function (a) {
+                    return a.name;
+                })
+            }],
+            series: [
+                {
+                    name: 'test',
+                    type: 'graph',
+                    layout: 'force',
+                    data: graph.nodes,
+                    links: graph.links,
+                    categories: graph.category,
+                    roam: true,
+                    label: {
+                        show: true
+                    },
+                    force: {
+                        repulsion: 1000
+                    },
+                    emphasis: {
+                        focus: 'adjacency',
+                        lineStyle: {
+                            width: 10
+                        }
                     }
                 }
-            }
-        ],
-        color: colorTable
-    };
+            ],
+            color: colorTable
+        };
 
-    myChart.setOption(option);
-
-    if (option && typeof option === 'object') {
         myChart.setOption(option);
+
+        if (option && typeof option === 'object') {
+            myChart.setOption(option);
+        }
     }
+
+    function renderBar() {
+        // set the dimensions and margins of the graph
+        var margin = {top: 0, right: 0, bottom: 30, left: 0},
+            width = 800 - margin.left - margin.right,
+            height = 500 - margin.top - margin.bottom;
+
+        // set the ranges
+        var x = d3.scaleBand()
+            .range([0, width])
+            .padding(0.4);
+        var y = d3.scaleLinear()
+            .range([height, 0]);
+
+        var tooltip = d3.select("body").append("div");
+
+        // append the svg object to the divivsion
+        var svg = d3.select("#column-chart-person").append("svg")
+            .attr('preserveAspectRatio', 'xMinYMin meet')
+            .attr(
+                'viewBox',
+                '0 0 ' +
+                (width + margin.left + margin.right) +
+                ' ' +
+                (height + margin.top + margin.bottom)
+            )
+            .append("g")
+            .attr("transform",
+                "translate(" + margin.left + "," + margin.top + ")");
+
+        const bgGradient = svg
+            .append('linearGradient')
+            .attr('id', 'bg-gradient')
+            .attr('gradientTransform', 'rotate(90)');
+        bgGradient
+            .append('stop')
+            .attr('stop-color', '#fd1d1d')
+            .attr('offset', '0%');
+        bgGradient
+            .append('stop')
+            .attr('stop-color', '#9c0063')
+            .attr('offset', '100%');
+
+        let data = [];
+        let temp = new Map();
+        graph.nodes.forEach(d => {
+            if (d.category === 1 && d.value !== '0') {
+                if (temp.get(d.value) === undefined) {
+                    temp.set(d.value, 1);
+                } else {
+                    temp.set(d.value, temp.get(d.value));
+                }
+            }
+        })
+        temp.forEach(function (value, key) {
+            data.push({travellers: value, period: key});
+        });
+        console.log(data);
+
+        // format the data
+        data.forEach(function (d) {
+            d.travellers = +d.travellers;
+        });
+
+        // Scale the range of the data in the domains
+        x.domain(data.map(function (d) {
+            return d.period;
+        }));
+        y.domain([0, d3.max(data, function (d) {
+            return d.travellers;
+        })]);
+
+        var formatComma = d3.format(",");
+
+        // append the rectangles for the bar chart
+        svg.selectAll(".bar")
+            .data(data)
+            .enter().append("rect")
+            .attr("fill", "rgba(76, 142, 230, 1)")
+            .attr("rx", 25)
+            .attr("x", function (d) {
+                return x(d.period);
+            })
+            .attr("width", x.bandwidth())
+            .attr("y", function (d) {
+                return y(d.travellers);
+            })
+            .attr("height", function (d) {
+                return height - y(d.travellers);
+            })
+            //add tooltip
+            .on("mousemove", function (d) {
+                tooltip
+                    .attr("class", "bar-tooltip")
+                    .style("left", d3.event.pageX + 5 + "px")
+                    .style("top", d3.event.pageY - 80 + "px")
+                    .style("display", "inline-block")
+                    .html((formatComma(d.travellers)));
+            })
+            .on("mouseout", function (d) {
+                tooltip.style("display", "none");
+            });
+
+        // add the x Axis
+        svg.append("g")
+            .attr("class", "bar-chart-axis")
+            .attr("transform", "translate(0," + height + ")")
+            .call(d3.axisBottom(x))
+            .call(g => g.select(".domain").remove());
+
+    }
+
 
 </script>
 </body>
