--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
             <div class="form-group form-search py-4 my-3">
                 <span class="fa fa-search form-icon"></span>
                 <input type="text" id="search" class="form-control" placeholder="Search person, article, journal...">
-                <ul class="list-group list-group-flush" id="list"></ul>
+                <ul id="list"></ul>
             </div>
             <h2>Explore</h2>
             <div class="row pb-3">
@@ -70,15 +70,32 @@
     searchObj.onkeyup = function(){
         oUl.innerHTML = "";
         let text = searchObj.value;
+        //长度为0时不请求
+        if(text===''){
+            return;
+        }
         //获取节点信息
-        $.get('/search',d=>{
-            console.log(d);
+        $.get(`/search?keyword=${text}`,data=>{
+            console.log(data);
+
+            for (const key in data) {
+                let oLi = document.createElement("li");
+                let value = data[key];
+                if(value===0){
+                    oLi.innerHTML = "<a href=\"person-detail?name="+ key + "\">"+ key + "</a>";
+                }else if(value===1){
+                    oLi.innerHTML = "<a href=\"article-detail?title="+ key + "\">"+ key + "</a>";
+                }else if(value===2){
+                    oLi.innerHTML = "<a href=\"journal-detail?title="+ key + "\">"+ key + "</a>";
+                }
+                oUl.appendChild(oLi);
+            }
+
+            data.forEach(function(value,key){
+
+            })
         });
-        // data.s.forEach(function(value){
-        //     let oLi = document.createElement("li");
-        //     oLi.innerHTML = "<a href=\"https://www.baidu.com/s?wd="+ value + "\">"+ value + "</a>";
-        //     oUl.appendChild(oLi);
-        // })
+
         // oUl.style.display = "block";
     }
 </script>
