modify the href of logo.

--- a/src/main/resources/templates/listing.html
+++ b/src/main/resources/templates/listing.html
@@ -21,7 +21,7 @@
             <div class="row pt-0 pb-4 py-md-4">
                 <div class="col-12 col-md-4 col-lg-2 my-auto">
                     <div class="logo py-5 py-md-0 ">
-                        <a href="index.html">
+                        <a href="/">
                             <img src="images/graphs-logo.svg" class="mx-auto mx-md-0">
                         </a>
                     </div>
