--- a/src/main/resources/templates/article-detail.html
+++ b/src/main/resources/templates/article-detail.html
@@ -22,7 +22,7 @@
             <div class="row pt-0 pb-2 pt-md-4">
                 <div class="col-12 col-md-4 col-lg-3 my-auto">
                     <div class="logo py-5 py-md-0 ">
-                        <a href="index.html">
+                        <a href="/">
                             <img src="images/graphs-logo.svg" class="mx-auto mx-md-0">
                         </a>
                     </div>
