--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
     <div class="row">
         <div class="col-12 offset-md-1 col-md-10 offset-lg-2 col-lg-8">
             <div class="logo pt-5 pt-md-0 pb-5">
-                <a href="index.html">
+                <a href="/">
                     <img src="images/graphs-logo.svg" class="mx-auto">
                 </a>
             </div>
