add counter of nodes at admin-dash

--- a/src/main/resources/templates/admin-dash.html
+++ b/src/main/resources/templates/admin-dash.html
@@ -40,21 +40,21 @@
                 <div class="col-12 col-md-4">
                     <div class="card-m card-person">
                         <span class="fa fa-user-circle card-icon"></span>
-                        <h1 class="pt-4">233</h1>
+                        <h1 class="pt-4" th:text="${person}">233</h1>
                         <h6>Persons</h6>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
                     <div class="card-m card-article">
                         <span class="far fa-file-alt card-icon"></span>
-                        <h1 class="pt-4">7362</h1>
+                        <h1 class="pt-4" th:text="${article}">7362</h1>
                         <h6>Articles</h6>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
                     <div class="card-m card-journal">
                         <span class="fa fa-book card-icon"></span>
-                        <h1 class="pt-4">1022</h1>
+                        <h1 class="pt-4" th:text="${journal}">1022</h1>
                         <h6>Journals</h6>
                     </div>
                 </div>
