fix the null journal bug in the article-detail

--- a/src/main/resources/templates/admin-dash.html
+++ b/src/main/resources/templates/admin-dash.html
@@ -60,9 +60,10 @@
                 </div>
             </div>
             <h3 class="pt-5">Manage</h3>
-            <form  id="upload-file-form">
+            <form id="upload-file-form">
                 <div class="custom-file  mt-4">
-                    <input type="file" class="custom-file-input" id="file" name="file" aria-describedby="inputGroupFileAddon04">
+                    <input type="file" class="custom-file-input" id="file" name="file"
+                           aria-describedby="inputGroupFileAddon04">
                     <label class="custom-file-label" for="file">Choose file</label>
                 </div>
             </form>
