fix the bug of upload

--- a/src/main/resources/templates/admin-dash.html
+++ b/src/main/resources/templates/admin-dash.html
@@ -72,7 +72,7 @@
             <button class="btn btn-secondary ml-2 mt-4">Download Sample CSV</button>
             <p><small>Acceptable file type: CSV</small></p>
             <span id="upload-file-message" class="alert alert-danger" style="display: none"></span>
-            <button class="btn btn-dark mt-4"><a href="admin-validate.html">Next</a></button>
+            <button class="btn btn-dark mt-4"><a href="/admin-validate">Next</a></button>
         </div>
     </div>
 </div>
