fix the bar chart bug

--- a/src/main/resources/templates/person-detail.html
+++ b/src/main/resources/templates/person-detail.html
@@ -294,7 +294,7 @@
                 if (temp.get(d.value) === undefined) {
                     temp.set(d.value, 1);
                 } else {
-                    temp.set(d.value, temp.get(d.value));
+                    temp.set(d.value, temp.get(d.value)+1);
                 }
             }
         })
