update echarts configuration

--- a/src/main/resources/templates/article-detail.html
+++ b/src/main/resources/templates/article-detail.html
@@ -233,11 +233,13 @@
                     links: graph.links,
                     categories: graph.category,
                     roam: true,
+                    draggable: true,
                     label: {
                         show: true
                     },
                     force: {
-                        repulsion: 1000
+                        repulsion: 1000,
+                        edgeLength: 80
                     },
                     emphasis: {
                         focus: 'adjacency',
