--- a/src/main/resources/templates/person-detail.html
+++ b/src/main/resources/templates/person-detail.html
@@ -28,13 +28,15 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-8 col-lg-9">
-                    <div class="form-group form-search mb-0 mr-5 pr-3">
+                    <div class="form-group form-search mb-0 mr-6 pr-3">
                         <span class="fa fa-search form-icon"></span>
-                        <input type="text" class="form-control" placeholder="Search person, article, journal...">
+                        <input type="text" class="form-control" id="search" placeholder="Search person, article, journal...">
+                        <div class="search-dropdown" id="suggest" style="display: none">
+                            <button type="button" class="dropdown-item" onclick="toList(this)"> <span id="person"></span> results in <em>Person</em></button>
+                            <button type="button" class="dropdown-item" onclick="toList(this)"> <span id="article"></span> results in <em>Article</em></button>
+                            <button type="button" class="dropdown-item" onclick="toList(this)"> <span id="journal"></span> results in <em>Journal</em></button>
+                        </div>
                     </div>
-                    <button class="btn btn-dark btn-sqr search-filter"><a href="#" data-toggle="modal"
-                                                                          data-target="#FilterModal"><i
-                            class="fa fa-sliders-h btn-icon"></i></a></button>
                 </div>
             </div>
         </div>
@@ -55,9 +57,6 @@
                 </div>
             </div>
             <div class="card-m card-graph">
-                <button class="btn btn-dark btn-sqr graph-filter"><a href="#" data-toggle="modal"
-                                                                     data-target="#graphModal"><i
-                        class="fa fa-sliders-h btn-icon"></i></a></button>
                 <div id="graphContainer" style="width: 100%;height:600px"></div>
             </div>
         </div>
@@ -91,95 +90,7 @@
         </div>
     </div>
 </div>
-
-<!-- Filter Modal-->
-<div class="modal fade" id="FilterModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h6 class="modal-title" id="exampleModalLabel">Set Filters</h6>
-                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form>
-                    <div class="row">
-                        <div class="col-12">
-                            <h6 class="pb-3">Publication Year</h6>
-                        </div>
-                        <div class="col-6">
-                            <input type="text" class="form-control mb-3" id="pubFilterFrom" name="pubFilterFrom"
-                                   placeholder="from">
-                        </div>
-                        <div class="col-6">
-                            <input type="text" class="form-control mb-3" id="pubFilterTo" name="pubFilterTo"
-                                   placeholder="to">
-                        </div>
-                        <div class="col-12">
-                            <h6 class="pb-3">Category</h6>
-                            <div class="btn-group" data-toggle="buttons">
-                                    			<span class="button-checkbox">
-											        <button type="button" class="btn" data-color="dark">Person</button>
-											        <input type="checkbox" style="display: none;"/>
-											    </span>
-                                <span class="button-checkbox">
-											        <button type="button" class="btn ml-2"
-                                                            data-color="dark">Article</button>
-											        <input type="checkbox" style="display: none;"/>
-											    </span>
-                                <span class="button-checkbox">
-											        <button type="button" class="btn ml-2"
-                                                            data-color="dark">Journal</button>
-											        <input type="checkbox" style="display: none;"/>
-											    </span>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                <button class="btn btn-dark" type="button" data-dismiss="modal">Apply Filter</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- Graph Filter Modal-->
-<div class="modal fade" id="graphModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h6 class="modal-title" id="exampleModalLabel">Set Graph Filters</h6>
-                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form>
-                    <div class="row">
-                        <div class="col-12">
-                            <h6 class="pb-3">Publication Year</h6>
-                        </div>
-                        <div class="col-6">
-                            <input type="text" class="form-control mb-3" id="pubFilterFrom" name="pubFilterFrom"
-                                   placeholder="from">
-                        </div>
-                        <div class="col-6">
-                            <input type="text" class="form-control mb-3" id="pubFilterTo" name="pubFilterTo"
-                                   placeholder="to">
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                <button class="btn btn-dark" type="button" data-dismiss="modal">Apply Filter</button>
-            </div>
-        </div>
-    </div>
-</div>
+<script src="js/search.js"></script>
 <script th:inline="javascript">
     const graph = /*[[${pDetailVO.echartsVO}]]*/ "??";
     renderGraph();
@@ -190,13 +101,20 @@
         const myChart = echarts.init(dom);
         const app = {};
         let option;
-        const colorTable = ['#FF5733', '#27AE60', '#884EA0'];
+        const colorTable = ['rgba(76, 142, 230, 1)', 'rgba(228, 78, 43, 1)', 'rgba(248, 181, 41, 1)'];
         // myChart.showLoading();
         graph.nodes.forEach(function (node) {
             node.symbolSize = 50;
         });
         graph.nodes.forEach(function (node) {
             node.category = parseInt(node.category);
+            if(node.category===1){
+                node.value = "Year: "+node.value;
+            }
+            node.label = {show:false};
+        })
+        graph.nodes.forEach(function (node){
+
         })
         option = {
             title: {
@@ -205,7 +123,16 @@
                 top: 'bottom',
                 left: 'right'
             },
-            tooltip: {},
+            tooltip: {}
+            ,toolbox: {
+                show: true,
+                itemSize: 30,
+                top: '90%',
+                right: '5%',
+                feature: {
+                    saveAsImage: {}
+                }
+            },
             legend: [{
                 // selectedMode: 'single',
                 data: graph.category.map(function (a) {
@@ -214,7 +141,6 @@
             }],
             series: [
                 {
-                    name: 'test',
                     type: 'graph',
                     layout: 'force',
                     data: graph.nodes,
@@ -224,10 +150,12 @@
                     draggable: true,
                     layoutAnimation: false,
                     label: {
-                        show: true,
-                        width: 10
+                        normal: {
+                            show: false,
+                        }
                     },
                     force: {
+                        initLayout:'force',
                         repulsion: 300,
                         edgeLength: 300
                     },
@@ -296,6 +224,7 @@
         let temp = new Map();
         graph.nodes.forEach(d => {
             if (d.category === 1 && d.value !== '0') {
+                d.value = d.value.substr(5);
                 if (temp.get(d.value) === undefined) {
                     temp.set(d.value, 1);
                 } else {
