deploy for server

--- a/src/main/resources/templates/listing.html
+++ b/src/main/resources/templates/listing.html
@@ -79,7 +79,7 @@
             </div>
 
             <div th:if="${category} eq 2" th:id="|card${category}|">
-                <div class="card-m card-journal">
+                <div class="card-m card-journal" style="display: none">
                     <div class="row">
                         <div class="col-2 col-lg-1">
                             <span class="fa fa-book card-icon"></span>
