--- a/src/main/resources/templates/listing.html
+++ b/src/main/resources/templates/listing.html
@@ -27,13 +27,14 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-8 col-lg-10">
-                    <div class="form-group form-search mb-0 mr-6 pr-3">
+                    <div class="form-group form-search mb-0 mr-6">
                         <span class="fa fa-search form-icon"></span>
-                        <input type="text" class="form-control" id="search" placeholder="Search person, article, journal...">
+                        <input type="text" id="search" class="form-control" placeholder="Search person, article, journal...">
                         <div class="search-dropdown" id="suggest" style="display: none">
-                            <button type="button" class="dropdown-item" onclick="toList(this)"> <span id="person"></span> results in <em>Person</em></button>
-                            <button type="button" class="dropdown-item" onclick="toList(this)"> <span id="article"></span> results in <em>Article</em></button>
-                            <button type="button" class="dropdown-item" onclick="toList(this)"> <span id="journal"></span> results in <em>Journal</em></button>
+                            <button type="button" class="dropdown-item suggestButton" onclick="toList(this)"> <span id="person"></span> results in <em>Person</em></button>
+                            <button type="button" class="dropdown-item suggestButton" onclick="toList(this)"> <span id="article"></span> results in <em>Article</em></button>
+                            <button type="button" class="dropdown-item suggestButton" onclick="toList(this)"> <span id="journal"></span> results in <em>Journal</em></button>
+                            <button type="button" class="dropdown-item disabled" id="alert0"> <i> <em>0</em> result is found</i> </button>
                         </div>
                     </div>
                 </div>
@@ -189,6 +190,12 @@
             })
         });
     });
+
+    function fillSearchBar(){
+        const searchBar = document.querySelector("#search");
+        searchBar.value = keyword;
+    }
+    fillSearchBar();
 </script>
 </body>
 </html>
