--- a/src/main/resources/templates/article-detail.html
+++ b/src/main/resources/templates/article-detail.html
@@ -30,12 +30,17 @@
                 <div class="col-12 col-md-8 col-lg-9">
                     <div class="form-group form-search mb-0 mr-6">
                         <span class="fa fa-search form-icon"></span>
-                        <input type="text" id="search" class="form-control" placeholder="Search person, article, journal...">
+                        <input type="text" id="search" class="form-control"
+                               placeholder="Search person, article, journal...">
                         <div class="search-dropdown" id="suggest" style="display: none">
-                            <button type="button" class="dropdown-item suggestButton" onclick="toList(this)"> <span id="person"></span> results in <em>Person</em></button>
-                            <button type="button" class="dropdown-item suggestButton" onclick="toList(this)"> <span id="article"></span> results in <em>Article</em></button>
-                            <button type="button" class="dropdown-item suggestButton" onclick="toList(this)"> <span id="journal"></span> results in <em>Journal</em></button>
-                            <button type="button" class="dropdown-item disabled" id="alert0"> <i> <em>0</em> result is found</i> </button>
+                            <button type="button" class="dropdown-item suggestButton" onclick="toList(this)"><span
+                                    id="person"></span> results in <em>Person</em></button>
+                            <button type="button" class="dropdown-item suggestButton" onclick="toList(this)"><span
+                                    id="article"></span> results in <em>Article</em></button>
+                            <button type="button" class="dropdown-item suggestButton" onclick="toList(this)"><span
+                                    id="journal"></span> results in <em>Journal</em></button>
+                            <button type="button" class="dropdown-item disabled" id="alert0"><i> <em>0</em> result is
+                                found</i></button>
                         </div>
                     </div>
                 </div>
@@ -74,7 +79,8 @@
                             <div class="card-s card-journal card-s-journal">
                                 <span class="fa fa-book card-icon"></span>
                                 <div class="card-s-info ml-5">
-                                    <h6 class="mb-1" th:text="${aDetailVO.article.journal.title}">Digital Journalism</h6>
+                                    <h6 class="mb-1" th:text="${aDetailVO.article.journal.title}">Digital
+                                        Journalism</h6>
                                     <p><b>Articles</b></p>
                                     <p class="ml-2" th:text="${aDetailVO.jCounter}">345</p>
                                 </div>
@@ -122,10 +128,10 @@
         });
         graph.nodes.forEach(function (node) {
             node.category = parseInt(node.category);
-            if(node.category===1){
-                node.value = "Year: "+node.value;
+            if (node.category === 1) {
+                node.value = "Year: " + node.value;
             }
-            node.label = {show:false};
+            node.label = {show: false};
         })
         option = {
             title: {
@@ -135,6 +141,19 @@
                 left: 'right'
             },
             tooltip: {},
+            toolbox: {
+                show: true,
+                itemSize: 30,
+                top: '90%',
+                right: '5%',
+                feature: {
+
+                    saveAsImage: {
+                        show: true,
+                        icon: 'image://images/download.png'
+                    }
+                }
+            },
             legend: [{
                 // selectedMode: 'single',
                 data: graph.category.map(function (a) {
